--- a/src/css/modules/maps.css
+++ b/src/css/modules/maps.css
@@ -5,15 +5,15 @@
 	min-width: 290px;
 	margin: 2em 0;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		min-height: 350px;
 	}
 
-	@include respond-min($large){
+	@mixin respond-min $large {
 		min-height: 400px;
 	}
 
-	@include respond-min($x-large){
+	@mixin respond-min $x-large{
 		min-height: 500px;
 	}
 }
