--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -7,7 +7,7 @@
                 <div class="grid-pad-1x">
                     <img class="lazyload" src="//cdn4.bethel.edu/images/seal2.png"/>
                     <div itemscope="" itemtype="https://schema.org/CollegeOrUniversity" class="bd">
-                        <h1 class="h5"><span itemprop="legalName">Bethel University</span></h1>
+                        <p class="h5"><span itemprop="legalName">Bethel University</span></p>
                         <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
                             <address><span itemprop="streetAddress">3900 Bethel Drive</span>
                                 <br/><span itemprop="addressLocality">St. Paul</span>, <span itemprop="addressRegion">MN</span> <span itemprop="postalCode">55112</span></address>
