--- a/src/css/base/fluidity.css
+++ b/src/css/base/fluidity.css
@@ -1,4 +1,4 @@
-// https://raw.githubusercontent.com/mrmrs/fluidity/master/sass/_responsive-utilities.scss
+/*// https://raw.githubusercontent.com/mrmrs/fluidity/master/sass/_responsive-utilities.scss*/
 
 /*
 
