--- a/src/css/base/forms.css
+++ b/src/css/base/forms.css
@@ -131,7 +131,7 @@ input[type="color"],
     /*border-color: rgba(82,168,236,.8);*/
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
-    /*@include box-shadow(#{inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)});*/
+    /*@mixin box-shadow(#{inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)});*/
   }
 }
 
@@ -182,5 +182,5 @@ select:focus,
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  /* @include tab-focus();*/
+  /* @mixin tab-focus();*/
 }
