--- a/src/css/enhance/date-tag.css
+++ b/src/css/enhance/date-tag.css
@@ -9,7 +9,7 @@
 .events__content {
 	padding-left: .75em;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		padding-left: 1em;
 	}
 
@@ -18,7 +18,7 @@
 		margin-top: 0;
 		line-height: 1.3;
 	
-		@include respond-min($large){
+		@mixin respond-min $large {
 			line-height: 1.4;
 		}
 	}
