--- a/src/css/enhance/off-canvas--site.css
+++ b/src/css/enhance/off-canvas--site.css
@@ -11,12 +11,12 @@
     top: 0;
     overflow-y: auto;
 
-    @include respond-min($navToggle){
+    @mixin respond-min $navToggle {
         position: relative;
     }
 }
 
-@include respond-max($navToggle - .01em){
+@mixin respond-max($navToggle - .01em){
 
     .no-js {
 
@@ -75,13 +75,13 @@
     float: right;
     margin-top: 1em;
 
-    @include respond-min($navToggle){
+    @mixin respond-min $navToggle {
         display: none;
     }
 }
 
 .no-js .close-btn {
-    @include respond-max($navToggle - .01em){
+    @mixin respond-max($navToggle - .01em){
         display: block;
     }
 }
