--- a/src/css/modules/events.css
+++ b/src/css/modules/events.css
@@ -9,7 +9,7 @@
 .events__content {
 	padding-left: .75em;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		padding-left: 1em;
 	}
 
@@ -18,14 +18,14 @@
 		margin-top: 0;
 		line-height: 1.3;
 	
-		@include respond-min($large){
+		@mixin respond-min $large {
 			line-height: 1.4;
 		}
 	}
 
 	.events__headline {
 		font-weight: 500;
-		@include gotham-500;
+		@mixin gotham-500;
 	}
 }
 
@@ -37,7 +37,7 @@
 	text-align: center;
 	padding: .4em 1em 1em;
 	border: 1px solid #ccc;
-	@include gotham-500;
+	@mixin gotham-500;
 	border-radius: .3em;
 	font-size: .889em;
 	margin-bottom: 0;
