--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -1,14 +1,14 @@
 .moving-picture {
 	position: relative;
 
-	@include respond-min(830px){
+	@mixin respond-min 830px {
 		/* max-height: 75vh;*/
 		overflow: hidden;
 	}
 }
 
 .moving-picture:before {
-	@include respond-min(0){
+	@mixin respond-min 0 {
         content: '';
         position: absolute;
         top: 0;
@@ -26,7 +26,7 @@
 	/* display: flex;*/
 	/* justify-content: center;*/
 
-	@include respond-min(830px){
+	@mixin respond-min 830px {
 		/* position: relative;*/
 
 		/* padding-bottom: 76%;*/
@@ -45,7 +45,7 @@
 	left: -100%;
 	right: -100%;
 
-	@include respond-min(830px){
+	@mixin respond-min 830px {
 		height: auto;
 		position: relative;
 		max-width: 100%;
@@ -62,7 +62,7 @@
 	height: 415px;
 	/* flex-shrink: 0;*/
 
-	@include respond-min(830px){
+	@mixin respond-min 830px {
 		height: auto;
 		position: relative;
 		max-width: 100%;
@@ -81,7 +81,7 @@
 	z-index: 1;
 	padding: 1em 2.5em;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		position: absolute;
 		left: 0;
 		bottom: 0;
@@ -89,7 +89,7 @@
 		padding: 5% 8%;
 	}
 
-	@include respond-min($x-large){
+	@mixin respond-min $x-large{
 	}
 }
 
@@ -99,11 +99,11 @@
 	font-weight: 300;
 	letter-spacing: .02em;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		font-size: 2em;
 	}
 
-	@include respond-min($x-large){
+	@mixin respond-min $x-large{
 		font-size: 3em;
 	}
 }
@@ -112,7 +112,7 @@
 	display: none;
 	margin-top: .75em;
 
-	@include respond-min($large){
+	@mixin respond-min $large {
 		display: block;
 	}
 }
@@ -129,7 +129,7 @@
 	margin-top: 0;
 	display: inline-block;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		margin-top: .5em;
 	}
 }
