--- a/src/css/modules/news.css
+++ b/src/css/modules/news.css
@@ -15,7 +15,7 @@
 	flex-basis: 60%;
 	min-width: 1px;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		padding-left: 1em;
 	}
 
@@ -24,7 +24,7 @@
 		margin-top: 0;
 		line-height: 1.2;
 	
-		@include respond-min($large){
+		@mixin respond-min $large {
 			line-height: 1.4;
 		}
 	}
