--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -24,7 +24,7 @@
 	position: relative;
 	display: table;
 
-	@include respond-min($medium){
+	@mixin respond-min $medium {
 		padding: 10em 0;
 	}
 
@@ -40,7 +40,7 @@
 		font-size: 2rem;
 		font-weight: 400;
 
-		@include respond-min($medium) {
+		@mixin respond-min $medium  {
 			font-size: 3rem;
 		}
 	}
