--- a/src/css/page/page__title.css
+++ b/src/css/page/page__title.css
@@ -4,7 +4,7 @@
 	padding: 0 1em;
 	flex-basis: 100%;
 
-	@include respond-min($navToggle){
+	@mixin respond-min $navToggle {
 		order: 1;
 		flex-shrink: 0;
 		padding: 0;
@@ -22,11 +22,11 @@
 	/* padding: 0;*/
 	/* font-family: $sentinel;*/
 
-	@include respond-min($navToggle){
+	@mixin respond-min $navToggle {
 		font-size: 2.5rem;
 	}
 
-	@include respond-min(60em){
+	@mixin respond-min $x-large{
 		font-size: 3rem;
 		line-height: 1;
 	}
