--- a/src/css/site/off-canvas--site.css
+++ b/src/css/site/off-canvas--site.css
@@ -1,180 +1,141 @@
-
-/* .outer-wrap--site__navigation {*/
-/*   position: relative;*/
-/*   overflow-x: hidden;*/
-/*   width: 100%;*/
-
-/*   @include respond-min($navToggle){*/
-/*     margin-top: 0;*/
-/*   }*/
-/* }*/
-
 .inner-wrap--site__navigation {
-  position: relative;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  background: #f5f5f5;
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    background: #f5f5f5;
 }
 
 .site__navigation {
-  background: #fff;
-  position: absolute;
-  margin-top: 3em;
-  margin-top: 0;
-  margin-bottom: 2em;
-  font-family: $gotham;
-  /* font-weight: 300;*/
-
-  @include respond-min($navToggle){
-    position: relative;
-    left: 0;
-    margin-right: 5%;
-    order: 2;
-    flex-basis:30%;
+    background: #fff;
+    position: absolute;
     margin-top: 3em;
-}
+    margin-top: 0;
+    margin-bottom: 2em;
+    font-family: $gotham;
 
-a {
-    color: #777;
+    @mixin respond-min $navToggle {
+        position: relative;
+        left: 0;
+        margin-right: 5%;
+        order: 2;
+        flex-basis:30%;
+        margin-top: 3em;
+    }
+
+    a {
+        color: #777;
+    }
 }
 
 .site__navigation__title {
-    background: rgba($bethel--navy, 1);
-    /* background: rgba($bethel--blue, 1);*/
-    /* background: $bethel--yellow;*/
-    /* background: #aaa;*/
+    background: $bethel--navy;
     margin: 0;
     padding: 1em;
-    /* color: #fff;*/
-    /* color: $bethel--blue;*/
     font-size: 1em;
     font-weight: 300;
     color: #fff;
 
     a {
-        /* color: $bethel--yellow;*/
         color: $bethel--blue;
         color: #fff;
     }
 }
 
-}
-
-/* .title-content {*/
-/*   flex-basis: 65%;*/
-/*   flex-grow: 1;*/
-/* }*/
-
 .main {
-  margin-top: 3em;
-  margin-bottom: 2em;
-  margin-top: 1em;
-  padding-left: 1em;
-  padding-right: 1em;
-  flex-basis: 100%;
-  order: 3;
-  min-width: 1%;
-
-  @include respond-min($navToggle) {
-    /* flex: 3;*/
-    padding-left: 0;
-    padding-right: 0;
-    flex-basis: 65%;
-    flex-grow:1;
     margin-top: 3em;
-}
+    margin-bottom: 2em;
+    margin-top: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+    flex-basis: 100%;
+    order: 3;
+    min-width: 1%;
+
+    @mixin respond-min $navToggle  {
+        padding-left: 0;
+        padding-right: 0;
+        flex-basis: 65%;
+        flex-grow:1;
+        margin-top: 3em;
+    }
 }
 
 .main + h2,
 .main + h3,
 .main + h4 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
 section + h2,
 section + h3,
 section + h4 {
-  margin-top: 0;
+    margin-top: 0;
 }
 
-/* @include respond-min(46.0625em){*/
+@mixin respond-max $navToggle {
 
-/*   .site__navigation .block-title {*/
-/*     border: 0;*/
-/*     clip: rect(0 0 0 0);*/
-/*     height: 1px;*/
-/*     margin: -1px;*/
-/*     overflow: hidden;*/
-/*     padding: 0;*/
-/*     position: absolute;*/
-/*     width: 1px;*/
-/*   }*/
-/* }*/
+    .site__navigation:not(:target) {
+        z-index: -1;
+        height: 0;
+    }
 
-@include respond-max($navToggle){
+    .no-js .site__navigation:target .close-btn {
+        display: block;
+    }
 
-  .site__navigation:not(:target) {
-    z-index: -1;
-    height: 0;
-}
+    .no-js .site__navigation {
+        background: #333;
+        z-index: 1;
+    }
 
-.no-js .site__navigation:target .close-btn {
-    display: block;
-}
+    .js .site__navigation {
+        height: auto;
+        width: 18em;
+    }
 
+    .js .site__navigation {
+        left: -18em;
+    }
 
-.no-js .site__navigation {
-    background: #333;
-    z-index: 1;
-}
+    .js .inner-wrap--site__navigation {
+        left: 0;
+    }
 
-.js .site__navigation {
-    height: auto;
-    width: 18em;
-}
+    .js-openSiteNav .inner-wrap--site__navigation {
+        left: 18em;
+    }
 
-.js .site__navigation {
-    left: -18em
-}
-.js .inner-wrap--site__navigation {
-    left: 0;
-}
+    /*.csstransforms3d.csstransitions*/.js .inner-wrap--site__navigation {
+        left: 0 !important;
+        transform: translate3d(0, 0, 0);
+        transition: transform 500ms ease;
+        backface-visibility: hidden;
+    }
 
-.js-openSiteNav .inner-wrap--site__navigation {
-    left: 18em;
-}
+    /*.csstransforms3d.csstransitions*/.js .site__navigation {
+        transition: transform 500ms ease;
+        transform: translate3d(0, 0, 0);
+        backface-visibility: hidden;
+    }
 
-/*.csstransforms3d.csstransitions*/.js .inner-wrap--site__navigation {
-    left: 0 !important;
-    transform: translate3d(0, 0, 0);
-    transition: transform 500ms ease;
-    backface-visibility: hidden;
-}
+    /*.csstransforms3d.csstransitions*/.js-openSiteNav .inner-wrap--site__navigation {
+        transform: translate3d(18em, 0, 0);
+    }
 
-/*.csstransforms3d.csstransitions*/.js .site__navigation {
-    transition: transform 500ms ease;
-    transform: translate3d(0, 0, 0);
-    backface-visibility: hidden;
-}
-
-/*.csstransforms3d.csstransitions*/.js-openSiteNav .inner-wrap--site__navigation {
-    transform: translate3d(18em, 0, 0);
-}
-
-/*.csstransforms3d.csstransitions*/.js-openSiteNav .site__navigation{
-    transform: translate3d(0, 0, 0);
-}
+    /*.csstransforms3d.csstransitions*/.js-openSiteNav .site__navigation{
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .close-btn,
 .js .close-btn {
-  display: none;
+    display: none;
 }
 
 .no-js .close-btn {
-    @include respond-max($navToggle){
-      display: block;
-  }
+    @mixin respond-max $navToggle {
+        display: block;
+    }
 }
