adding forcedHeight true to skrollr

--- a/src/templates/partials/image-bank.hbs
+++ b/src/templates/partials/image-bank.hbs
@@ -1,3 +1,4 @@
+<div class="site__image-bank">
 <div class="flickity  carousel--image-bank" tabindex="0">
 
     <div class="flickity--cell">
@@ -106,6 +107,7 @@
 
 
 
+                            </div>
                             </div>
                             </div>
                             </div>
