--- a/src/css/enhance/carousel.css
+++ b/src/css/enhance/carousel.css
@@ -1,33 +1,21 @@
-/*// .slick-carousel {*/
-/*     position: relative;*/
-/*     height: auto;*/
-/* }*/
+.carousel-constrain {
+    max-width: 1200px;
+    margin: 0 auto;
 
-/* .slick-item a {*/
-/*     // display: block;*/
-/*     // position: relative;*/
-/* }*/
+    @mixin respond-min $medium {
+        padding: 0 1em;
+    }
 
-/* .slick-next:before {*/
-/*     content: '»';*/
-/* }*/
-/* .slick-prev:before {*/
-/*     content: '«';*/
-/* }*/
-/* .slick-next,.slick-prev {*/
-/*     // background: #0069aa;*/
-/*     background: transparent;*/
-/*     // width: 3em;*/
-/*     // height: 3em;*/
-/*     border: 0;*/
-/*     color: #fff;*/
-/*     // position: absolute;*/
-/*     // top: 50%;*/
-/* }*/
-/* .slick-next:hover,.slick-prev:hover{*/
-/*     opacity: 1;*/
-/*     background: #0069aa;*/
-/* }*/
+    @mixin respond-min $large {
+        padding: 0 3em;
+    }
+
+    .moving-picture {
+        @mixin respond-min 1200px {
+            height: 639px;
+        }
+    }
+}
 
 .carousel--basic a:hover,
 .carousel--overlay a:hover {
@@ -51,7 +39,7 @@
     margin-right: .8em;
     font-size: 1.5rem;
     color: #fff;
-    font-family: "Gotham 5r","Gotham A","Gotham B","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: $gotham;
     font-weight: 500;
     font-style: normal;
     line-height: 1.4;
@@ -60,7 +48,8 @@
 .carousel--basic .feature__blockquote:before {
     content: '“';
     font-size: 1.5em;
-    margin-left: -.6em;line-height:0;
+    margin-left: -.6em;
+    line-height:0;
     padding-right: .1em;
     display: inline-block;
     vertical-align: middle;
@@ -79,126 +68,8 @@
 .carousel--basic .feature__figcaption {
     margin-bottom: 0;
     color: #665;
-    font-family: "Gotham 5r","Gotham A","Gotham B","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: $gotham;
     font-weight: 500;
     font-style: normal;
     font-size: .8em
-}
-
-
-
-.carousel--overlay {
-
-    /* font-family: $gotham;*/
-
-    /* a {*/
-    /*     width: 100%;*/
-    /*     height: 350px;*/
-    /*     max-height: 600px;*/
-    /*     position: relative;*/
-    /*     overflow: hidden;*/
-    /*     margin: 0 auto;*/
-
-    /*     @mixin respond-min(50em){*/
-    /*         height: auto;*/
-    /*     }*/
-    /* }*/
-
-    /* .feature__img {*/
-    /*     width: 100%;*/
-
-    /*     @mixin respond-max(49.999em){*/
-    /*         margin: 0;*/
-    /*         position: absolute;*/
-    /*         top: 50%;*/
-    /*         left: 50%;*/
-    /*         margin-right: -50%;*/
-    /*         transform: translate(-50%, -50%);*/
-
-    /*         min-width: 750px;*/
-    /*         min-width: 875px;*/
-    /*     }*/
-    /* }*/
-
-    /* a:before {*/
-    /*     content: '';*/
-    /*         position: absolute;*/
-    /*         top: 0;*/
-    /*         right: 0;*/
-    /*         bottom: 0;*/
-    /*         left: 0;*/
-    /*         background-image: linear-gradient(to bottom,transparent,#000);*/
-    /*         opacity: .7;*/
-    /*         z-index: 1; */
-    /*   }*/
-
-    /* .feature__figure {*/
-    /*     width: 70%;*/
-    /*     position: absolute;*/
-    /*     bottom: 4%;*/
-    /*     bottom: 0;*/
-    /*     border-bottom: 0;*/
-    /*     padding: 1% 2% 2%;*/
-    /*     z-index: 2;*/
-    /* }*/
-
-    /* .feature__blockquote {*/
-    /*     margin: 0 0 1%;*/
-    /*     z-index: 30;*/
-    /*     line-height: 1.2;*/
-    /*     font-weight: 400;*/
-    /*     font-style: normal;*/
-    /*     text-shadow: 0 1px 1px #333;*/
-    /*     color: #fff;*/
-    /*     font-size: 25.63px;*/
-    /*     font-size: 1.3rem;*/
-
-    /*     @mixin respond-min $medium {*/
-    /*         font-size: 2rem;*/
-    /*     }*/
-
-    /*     @mixin respond-min $x-large{*/
-    /*         font-size: 2.5rem;*/
-    /*     }*/
-    /* }*/
-
-    /* .ie8 .feature__blockquote {*/
-    /*     background-color: #0069aa;*/
-    /*     font-size: 23px*/
-    /* }*/
-
-    /* .feature__figcaption {*/
-    /*     margin: 0;*/
-    /*     font-size: .889rem;*/
-    /*     color: #fff*/
-    /* }*/
-
-    /* .slick-next,*/
-    /* .slick-prev {*/
-    /*     position: absolute;*/
-    /*     top: 50%;*/
-    /*     border-radius: 50%;*/
-    /*     font-size: 1.5em;*/
-    /* }*/
-
-    /* .slick-next:hover,*/
-    /* .slick-prev:hover {*/
-    /*     background: transparent;*/
-    /* }*/
-
-    /* .slick-next {*/
-    /*     right: 0;*/
-
-    /*     @mixin respond-min $medium {*/
-    /*         right: 3%;*/
-    /*     }*/
-    /* }*/
-
-    /* .slick-prev {*/
-    /*     left: 0%;*/
-
-    /*     @mixin respond-min $medium {*/
-    /*         left: 3%;*/
-    /*     }*/
-    /* }*/
 }
