--- a/src/css/global/footer.css
+++ b/src/css/global/footer.css
@@ -52,6 +52,11 @@
     a.btn {
         color: #fff;
     }
+
+    .social-media {
+        padding-left: 1em;
+        padding-right: 1em;
+    }
 }
 
 .arrow-up {
