--- a/src/css/global/header.css
+++ b/src/css/global/header.css
@@ -7,8 +7,9 @@
 
 .global__header .inner {
     position: relative;
+    padding: 0 .5em;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -17,10 +18,10 @@
 
 .global__logo {
     width: 9em;
-    padding: .5em 0;
+    padding: .7em 0 .4em;
     float: left;
     
-    @mixin respond-min $navToggle { 
+    @mixin respond-min $large { 
         padding: 1.5em 0;
         width: 11em;
         float: none;
@@ -38,13 +39,13 @@
 .burger {
     background: #17437d;
     padding: .25em .6em;
-    margin-right: 1em;
+    /*margin-right: 1em;*/
     margin-top: 1em;
     font-family: $gotham;
     font-size: .9rem;
     float: right;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
       display: none;
     }
 }
