--- a/src/css/global/navigation.css
+++ b/src/css/global/navigation.css
@@ -1,7 +1,7 @@
 .big-global__navigation {
     display: none;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: block;
     }
 
@@ -9,7 +9,7 @@
         margin: 0;
         font-size: .9em;
 
-        @mixin respond-min $navToggle {
+        @mixin respond-min $large {
             font-family: $gotham;
             display: inline-block;
             font-weight: 500;
@@ -41,7 +41,7 @@
 .global__navigation {
     display: block;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: none;
     }
 
@@ -77,8 +77,7 @@
 }
 
 .quick-links {
-
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -92,7 +91,7 @@
     margin-top: 0;
     padding: 0;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         margin-bottom: 0;
     }
 }
@@ -100,7 +99,7 @@
 .quick-links ul li {
     padding: .2em 0em;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: inline-block;
         padding: .2em .4em;
     }
@@ -111,9 +110,9 @@
 }
 
 .quick-links--search {
-    margin-top: 1em;
+    margin-top: 1em !important;
 
-    @mixin respond-min $navToggle {
-        margin-top: 0;
+    @mixin respond-min $large {
+        margin-top: 0 !important;
     }
 }
