--- a/src/css/grid/flex-grid.css
+++ b/src/css/grid/flex-grid.css
@@ -169,7 +169,7 @@
 .grid--1-3>.grid-cell {flex-basis: 33.3333%;}
 .grid--1-4>.grid-cell {flex-basis: 25%;}
 
-@mixin respond-max $small {
+@media (max-width: 51.99em) {
     .small-grid--fit > .grid-cell {flex-basis: 1;}
     .small-grid--full > .grid-cell {flex-basis: 100%;}
     .small-grid--1-2 > .grid-cell {flex-basis: 50%;}
@@ -235,7 +235,7 @@
 .u-2-2,
 .u-1-1   {flex-basis: 100%;flex-grow:0;}
 
-@mixin respond-max $small {
+@media (max-width: 51.99em) {
     .u-small-1-12  {flex-basis: 8.33333%;flex-grow:0;}
     .u-small-2-12,
     .u-small-1-6  {flex-basis: 16.66667%;flex-grow:0;}
@@ -393,7 +393,7 @@
 
 .grid--full > .grid-cell {width: 100%;}
 
-@mixin respond-max $small {
+@media (max-width: 51.99em) {
     .small-grid-pad-\.5x {padding: .5em;}
     .small-grid-pad-1x {padding: 1em;}
     .small-grid-pad-1\.5x {padding: 1.5em;}
