--- a/src/css/modules/events.css
+++ b/src/css/modules/events.css
@@ -1,5 +1,3 @@
-.events {}
-
 .events__item {
 	margin: 2em 0;
 	display: flex;
@@ -7,45 +5,34 @@
 }
 
 .events__content {
-	padding-left: .75em;
-
-	@mixin respond-min $medium {
-		padding-left: 1em;
-	}
+	padding-left: 1em;
 
 	p {
 		margin-bottom: 0;
 		margin-top: 0;
-		line-height: 1.3;
-	
-		@mixin respond-min $large {
-			line-height: 1.4;
-		}
-	}
-
-	.events__headline {
-		font-weight: 500;
-		@mixin gotham-500;
 	}
 }
 
+.events__headline {
+	font-weight: 500;
+	font-family: $gotham;
+}
 
 .events__date-tile {
+	font-family: $gotham;
 	background: #fff;
 	flex-basis: 5em;
 	flex-shrink: 0;
 	text-align: center;
-	padding: .4em 1em 1em;
+	padding: .8em 1em;
 	border: 1px solid #ccc;
-	@mixin gotham-500;
 	border-radius: .3em;
 	font-size: .889em;
-	margin-bottom: 0;
-	min-width: 1px;
+	/*min-width: 1px;*/
 }
 
 .events__date-tile span {
-	display: block;
+	/*display: block;*/
 	font-size: 2.2em;
 	line-height: 1;
 }
