--- a/src/css/page/page__title.css
+++ b/src/css/page/page__title.css
@@ -1,10 +1,9 @@
 .page__title {
 	margin-top: 1em;
-	/* margin-bottom: 1em;*/
-	padding: 0 1em;
+	padding: 0 2em;
 	flex-basis: 100%;
 
-	@mixin respond-min $navToggle {
+	@mixin respond-min $large {
 		order: 1;
 		flex-shrink: 0;
 		padding: 0;
@@ -13,16 +12,13 @@
 }
 
 .page__title h1 { 
-	/* font-weight: 700;*/
 	font-weight: 400;
 	font-size: 2.25rem;
 	line-height: 1.1;
 	margin-top: 0;
 	margin-bottom: 0;
-	/* padding: 0;*/
-	/* font-family: $sentinel;*/
 
-	@mixin respond-min $navToggle {
+	@mixin respond-min $large {
 		font-size: 2.5rem;
 	}
 
