--- a/src/css/site/site__title.css
+++ b/src/css/site/site__title.css
@@ -5,7 +5,7 @@
     margin: 0;
     margin-top: 1em;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         margin-top: 2em;
     }
 }
@@ -26,7 +26,7 @@
     text-transform: uppercase;
     text-align: center;
 
-    @mixin respond-min $navToggle {
+    @mixin respond-min $large {
         display: none;
     }
 }
